--- a/aol/templates/admin/listing.html
+++ b/aol/templates/admin/listing.html
@@ -8,4 +8,9 @@
 		{% endfor %}
 	</ul>
 </div>
+
+<aside>
+	<h3>Plant Information</h3>
+	<a href="{% url 'admin-add-plant'">Add</a>
+</aside>
 {% endblock %}
